--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Constructor.io JavaScript client",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:dev": "webpack --config webpack.config.dev.js",
+    "build:prod": "webpack",
+    "lint": "eslint '**/*.js'"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,24 @@
   "bugs": {
     "url": "https://github.com/Constructor-io/constructorio-client-javascript/issues"
   },
-  "homepage": "https://github.com/Constructor-io/constructorio-client-javascript#readme"
+  "homepage": "https://github.com/Constructor-io/constructorio-client-javascript#readme",
+  "pre-push": [
+    "lint"
+  ],
+  "devDependencies": {
+    "@babel/cli": "^7.6.0",
+    "@babel/core": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "pre-push": "^0.1.1",
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.8",
+    "webpack-merge": "^4.2.2"
+  },
+  "dependencies": {
+    "es6-promise": "^4.2.8",
+    "fetch-ponyfill": "^6.1.0"
+  }
 }
