--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build:dev": "webpack --config webpack.config.dev.js",
-    "build:prod": "webpack",
+    "build": "webpack",
     "lint": "eslint '**/*.js'"
   },
   "repository": {
