--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "constructorio-client-javascript",
   "version": "1.0.0",
   "description": "Constructor.io JavaScript client",
-  "main": "index.js",
+  "main": "src/constructorio.js",
   "scripts": {
     "build:dev": "webpack --config webpack.config.dev.js --mode=development",
     "build": "webpack --mode=production",
@@ -31,8 +31,11 @@
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
+    "filemanager-webpack-plugin": "^2.0.5",
     "http-server": "^0.11.1",
+    "mocha": "^6.2.0",
     "pre-push": "^0.1.1",
+    "testem": "^2.17.0",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.8",
     "webpack-merge": "^4.2.2"
