Remove old distributions when building.

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Constructor.io JavaScript client",
   "main": "src/constructorio.js",
   "scripts": {
-    "build:dev": "webpack --config webpack.config.dev.js --mode=development",
-    "build": "webpack --mode=production",
+    "build": "rm -rf ./dist/* && webpack --mode=production",
+    "build:dev": "rm -rf ./dist/* && webpack --config webpack.config.dev.js --mode=development",
     "serve": "npm run build:dev -- --watch --progress & http-server ./ -p 8080 -o -c-1",
     "lint": "eslint '**/*.js'",
-    "version": "npm run build && git add ./dist/*"
+    "version": "git rm ./dist/* && npm run build && git add ./dist/*"
   },
   "repository": {
     "type": "git",
