--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "constructorio-client-javascript",
   "version": "1.1.1",
   "description": "Constructor.io JavaScript client",
-  "main": "src/constructorio.js",
+  "main": "src/index.js",
   "scripts": {
     "build": "rm -rf ./dist/* && webpack --mode=production",
     "build:dev": "rm -rf ./dist/* && webpack --config webpack.config.dev.js --mode=development",
     "serve": "npm run build:dev -- --watch --progress & http-server ./ -p 8080 -o -c-1",
     "lint": "eslint '**/*.js'",
-    "version": "git rm ./dist/* && npm run build && git add ./dist/*"
+    "version": "git rm ./dist/* && npm run build && git add ./dist/*",
+    "test": "mocha ./spec/* --require @babel/register --require ./spec/mocha.setup.js"
   },
   "repository": {
     "type": "git",
@@ -24,10 +25,12 @@
     "lint"
   ],
   "devDependencies": {
-    "@babel/cli": "^7.6.0",
-    "@babel/core": "^7.6.0",
-    "@babel/preset-env": "^7.6.0",
-    "babel-loader": "^8.0.6",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "@babel/register": "^7.4.4",
+    "babel-loader": "^8.0.5",
+    "chai": "^4.2.0",
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-airbnb-base": "^14.0.0",
@@ -35,6 +38,7 @@
     "filemanager-webpack-plugin": "^2.0.5",
     "http-server": "^0.11.1",
     "mocha": "^6.2.0",
+    "mocha-jsdom": "^2.0.0",
     "pre-push": "^0.1.1",
     "testem": "^2.17.0",
     "webpack": "^4.39.3",
