--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,11 @@
 {
   "env": {
     "browser": true,
-    "mocha": true
+    "mocha": true,
   },
   "extends": "airbnb/base",
   "globals": {
     "SEARCH_VERSION": true,
+    "expect": true,
   }
 }
