--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "serve": "npm run build:dev -- --watch --progress & http-server ./ -p 8080 -o -c-1",
     "lint": "eslint '**/*.js'",
     "version": "git rm ./dist/* && npm run build && git add ./dist/*",
-    "test": "mocha ./spec/* --require @babel/register --require ./spec/mocha.setup.js"
+    "test": "mocha ./spec/* --opts ./mocha.opts",
+    "precoverage": "rm -rf ./coverage",
+    "coverage": "nyc --all --reporter=html npm test",
+    "postcoverage": "http-server ./coverage -p 8081 -o -c-1"
   },
   "repository": {
     "type": "git",
@@ -39,6 +42,7 @@
     "http-server": "^0.11.1",
     "mocha": "^6.2.0",
     "mocha-jsdom": "^2.0.0",
+    "nyc": "^14.1.1",
     "pre-push": "^0.1.1",
     "testem": "^2.17.0",
     "webpack": "^4.39.3",
