Remove dependency on index file to serve deliverable. Update exports, remove concept of "latest".

--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "constructorio-client-javascript",
   "version": "1.1.1",
   "description": "Constructor.io JavaScript client",
-  "main": "src/index.js",
+  "main": "src/constructorio.js",
   "scripts": {
-    "build": "rm -rf ./dist/* && webpack --mode=production",
-    "build:dev": "rm -rf ./dist/* && webpack --config webpack.config.dev.js --mode=development",
+    "build": "webpack --mode=production",
+    "build:dev": "webpack --config webpack.config.dev.js --mode=development",
     "serve": "npm run build:dev -- --watch --progress & http-server ./ -p 8080 -o -c-1",
     "lint": "eslint '**/*.js'",
-    "version": "git rm ./dist/* && npm run build && git add ./dist/*",
+    "version": "npm run build && git add ./dist/*",
     "test": "mocha ./spec/* --opts ./mocha.opts",
     "precoverage": "rm -rf ./coverage",
     "coverage": "nyc --all --reporter=html npm test",
@@ -38,7 +38,6 @@
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
-    "filemanager-webpack-plugin": "^2.0.5",
     "http-server": "^0.11.1",
     "mocha": "^6.2.0",
     "mocha-jsdom": "^2.0.0",
