--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "mocha ./spec/* --opts ./mocha.opts --recursive",
     "precoverage": "rm -rf ./coverage && rm -rf ./.nyc_output",
     "coverage": "nyc --all --reporter=html npm test",
-    "postcoverage": "http-server ./coverage -p 8081 -o -c-1"
+    "postcoverage": "http-server ./coverage -p 8081 -o -c-1",
+    "docs": "jsdoc --recurse ./src --destination ./docs && http-server ./docs -p 8082 -o -c-1"
   },
   "repository": {
     "type": "git",
@@ -41,6 +42,7 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "http-server": "^0.11.1",
+    "jsdoc": "^3.6.3",
     "mocha": "^6.2.0",
     "mocha-jsdom": "^2.0.0",
     "nyc": "^14.1.1",
