--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "precoverage": "rm -rf ./coverage && rm -rf ./.nyc_output",
     "coverage": "nyc --all --reporter=html npm test",
     "postcoverage": "http-server ./coverage -p 8081 -o -c-1",
-    "docs": "jsdoc --recurse ./src --destination ./docs && http-server ./docs -p 8082 -o -c-1"
+    "docs": "jsdoc --configure ./.jsdoc.json --recurse ./src --destination ./docs && http-server ./docs -p 8082 -o -c-1"
   },
   "repository": {
     "type": "git",
@@ -43,6 +43,7 @@
     "eslint-plugin-import": "^2.18.2",
     "http-server": "^0.11.1",
     "jsdoc": "^3.6.3",
+    "minami": "^1.2.3",
     "mocha": "^6.2.0",
     "mocha-jsdom": "^2.0.0",
     "nyc": "^14.1.1",
