--- a/package.json
+++ b/package.json
@@ -4,11 +4,7 @@
   "description": "Constructor.io JavaScript client",
   "main": "src/constructorio.js",
   "scripts": {
-    "build": "webpack --mode=production",
-    "build:dev": "webpack --config webpack.config.dev.js --mode=development",
-    "serve": "npm run build:dev -- --watch --progress & http-server ./ -p 8080 -o -c-1",
     "lint": "eslint '**/*.js'",
-    "version": "npm run build && git add ./dist/*",
     "test": "mocha ./spec/* --opts ./mocha.opts --recursive",
     "precoverage": "rm -rf ./coverage && rm -rf ./.nyc_output",
     "coverage": "nyc --all --reporter=html npm test",
@@ -32,7 +28,6 @@
     "@babel/core": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
     "@babel/register": "^7.4.4",
-    "babel-loader": "^8.0.5",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^8.1.0",
@@ -44,11 +39,7 @@
     "mocha": "^6.2.0",
     "mocha-jsdom": "^2.0.0",
     "nyc": "^14.1.1",
-    "pre-push": "^0.1.1",
-    "testem": "^2.17.0",
-    "webpack": "^4.39.3",
-    "webpack-cli": "^3.3.8",
-    "webpack-merge": "^4.2.2"
+    "pre-push": "^0.1.1"
   },
   "dependencies": {
     "constructorio-id": "git+ssh://git@github.com/Constructor-io/constructorio-identity.git#v2.0.0",
