--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "constructorio-client-javascript",
+  "name": "@constructor-io/constructorio-client-javascript",
   "version": "1.5.1",
   "description": "Constructor.io JavaScript client",
   "main": "src/constructorio.js",
@@ -42,7 +42,7 @@
     "pre-push": "^0.1.1"
   },
   "dependencies": {
-    "constructorio-id": "git+ssh://git@github.com/Constructor-io/constructorio-identity.git#v2.0.0",
+    "@constructor-io/constructorio-id": "^2.1.0",
     "es6-promise": "^4.2.8",
     "fetch-ponyfill": "^6.1.0",
     "qs": "^6.8.0"
