--- a/package.json
+++ b/package.json
@@ -38,12 +38,12 @@
     "eslint-plugin-import": "^2.18.2",
     "http-server": "^0.11.1",
     "jsdoc": "^3.6.3",
+    "jsdom": "^15.1.1",
     "minami": "^1.2.3",
     "mocha": "^6.2.0",
     "mocha-jsdom": "^2.0.0",
     "nyc": "^14.1.1",
-    "pre-push": "^0.1.1",
-    "simulant": "^0.2.2"
+    "pre-push": "^0.1.1"
   },
   "dependencies": {
     "@constructor-io/constructorio-id": "^2.1.0",
