--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Constructor.io JavaScript client",
   "main": "src/constructorio.js",
   "scripts": {
+    "clean": "rm -rf node_modules",
+    "check-deps": "npm-check",
+    "check-lisc": "license-checker --production --onlyAllow 'Apache-2.0;BSD-3-Clause;MIT'",
     "lint": "eslint '**/*.js'",
     "test": "mocha ./spec/* --opts ./mocha.opts --recursive",
     "precoverage": "rm -rf ./coverage && rm -rf ./.nyc_output",
@@ -24,6 +27,57 @@
   "pre-push": [
     "lint"
   ],
+  "eslintConfig": {
+    "env": {
+      "browser": true,
+      "mocha": true
+    },
+    "extends": "airbnb-base",
+    "globals": {
+      "CLIENT_VERSION": true,
+      "expect": true
+    },
+    "rules": {
+      "global-require": "off",
+      "max-len": [
+        "error",
+        120,
+        2,
+        {
+          "ignoreUrls": true,
+          "ignoreComments": false,
+          "ignoreRegExpLiterals": true,
+          "ignoreStrings": true,
+          "ignoreTemplateLiterals": true
+        }
+      ],
+      "object-curly-newline": "off",
+      "padded-blocks": "off",
+      "react/prefer-stateless-function": "off",
+      "no-unused-vars": [
+        "error",
+        {
+          "varsIgnorePattern": "style"
+        }
+      ],
+      "max-depth": [
+        "error",
+        4
+      ],
+      "max-nested-callbacks": [
+        "error",
+        5
+      ],
+      "max-params": [
+        "error",
+        4
+      ],
+      "complexity": [
+        "error",
+        20
+      ]
+    }
+  },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.0",
@@ -32,13 +86,13 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^8.1.0",
-    "eslint": "^6.1.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2",
+    "eslint": "^5.12.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.15.0",
     "http-server": "^0.11.1",
     "jsdoc": "^3.6.3",
     "jsdom": "^15.1.1",
+    "license-checker": "^25.0.1",
     "lodash.clonedeep": "^4.5.0",
     "minami": "^1.2.3",
     "mocha": "^6.2.0",
