--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
   "extends": "airbnb-base",
   "globals": {
     "CLIENT_VERSION": true,
+    "testPath": true,
     "expect": true
   },
   "rules": {
