Revert test structure changes.

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "check-deps": "npm-check",
     "check-lisc": "license-checker --production --onlyAllow 'Apache-2.0;BSD-3-Clause;MIT'",
     "lint": "eslint 'src/**/*.js' 'spec/**/*.js'",
-    "test": "npm run compile && TEST_PATH=lib mocha ./spec/* --opts ./mocha.opts --recursive",
+    "test": "mocha ./spec/* --opts ./mocha.opts --recursive",
     "precoverage": "rm -rf ./coverage && rm -rf ./.nyc_output",
-    "coverage": "TEST_PATH=src nyc --all --reporter=html mocha ./spec/* --opts ./mocha.opts --recursive",
+    "coverage": "nyc --all --reporter=html npm test",
     "postcoverage": "http-server ./coverage -p 8081 -o -c-1",
     "docs": "jsdoc --configure ./.jsdoc.json ./README.md --recurse ./src --destination ./docs && http-server ./docs -p 8082 -o -c-1",
     "compile": "babel -d lib/ src/",
