Test transpiled code rather than source.

--- a/.nycrc
+++ b/.nycrc
@@ -1,9 +1,9 @@
 {
   "exclude": [
-    "src/utils/store*"
+    "test/utils/store*"
   ],
   "include": [
-    "src/*"
+    "test/*"
   ],
   "extension": [
     ".js"
