--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "check-deps": "npm-check",
     "check-lisc": "license-checker --production --onlyAllow 'Apache-2.0;BSD-3-Clause;MIT'",
     "lint": "eslint 'src/**/*.js' 'spec/**/*.js'",
-    "test": "mocha ./spec/* --opts ./mocha.opts --recursive",
+    "test": "npm run compile && mkdir -p test && cp -rf lib/* test && mocha ./spec/* --opts ./mocha.opts --recursive",
+    "test:src": "mkdir -p test && cp -rf src/* test && mocha ./spec/* --opts ./mocha.opts --recursive",
     "precoverage": "rm -rf ./coverage && rm -rf ./.nyc_output",
-    "coverage": "nyc --all --reporter=html npm test",
-    "postcoverage": "http-server ./coverage -p 8081 -o -c-1",
+    "coverage": "nyc --all --reporter=html npm run test:src",
+    "postcoverage": "http-server ./coverage -p 8081 -o -c-1 && rm -rf test",
     "docs": "jsdoc --configure ./.jsdoc.json ./README.md --recurse ./src --destination ./docs && http-server ./docs -p 8082 -o -c-1",
     "compile": "babel -d lib/ src/",
     "prepublish": "npm run compile"
