--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "precoverage": "rm -rf ./coverage && rm -rf ./.nyc_output",
     "coverage": "nyc --all --reporter=html npm run test:src",
     "postcoverage": "http-server ./coverage -p 8081 -o -c-1 && rm -rf test",
-    "docs": "jsdoc --configure ./.jsdoc.json ./README.md --recurse ./src --destination ./docs && http-server ./docs -p 8082 -o -c-1",
+    "docs": "jsdoc --configure ./.jsdoc.json ./README.md --recurse ./src --destination ./docs",
     "compile": "babel -d lib/ src/",
     "prepublish": "npm run compile"
   },
@@ -28,7 +28,8 @@
   },
   "homepage": "https://github.com/Constructor-io/constructorio-client-javascript#readme",
   "pre-push": [
-    "lint"
+    "lint",
+    "docs"
   ],
   "files": [
     "lib/**/*"
