--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "lib/constructorio.js",
   "scripts": {
     "clean": "rm -rf node_modules",
+    "version": "npm run docs && git add ./docs/*",
     "check-deps": "npm-check",
     "check-lisc": "license-checker --production --onlyAllow 'Apache-2.0;BSD-3-Clause;MIT'",
     "lint": "eslint 'src/**/*.js' 'spec/**/*.js'",
@@ -13,7 +14,7 @@
     "precoverage": "rm -rf ./coverage && rm -rf ./.nyc_output",
     "coverage": "nyc --all --reporter=html npm run test:src",
     "postcoverage": "http-server ./coverage -p 8081 -o -c-1 && rm -rf test",
-    "docs": "jsdoc --configure ./.jsdoc.json ./README.md --recurse ./src --destination ./docs && http-server ./docs -p 8082 -o -c-1",
+    "docs": "jsdoc --configure ./.jsdoc.json ./README.md --recurse ./src --destination ./docs",
     "compile": "babel -d lib/ src/",
     "prepublish": "npm run compile"
   },
