--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Constructor.io JavaScript client",
   "main": "lib/constructorio.js",
   "scripts": {
-    "clean": "sudo rm -rf node_modules package-lock.json && npm install",
+    "clean": "sudo rm -rf node_modules package-lock.json",
     "version": "npm run docs && git add ./docs/*",
     "check-deps": "npm-check",
     "check-lisc": "license-checker --production --onlyAllow 'Apache-2.0;BSD-3-Clause;MIT'",
