--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "coverage": "nyc --all --reporter=html npm run test:src",
     "postcoverage": "serve --listen 8080 --config ./serve.json && rm -rf test",
     "docs": "jsdoc --configure ./.jsdoc.json ./README.md --recurse ./src --destination ./docs",
-    "compile": "babel -d lib/ src/",
-    "prepublish": "npm run compile"
+    "compile": "babel src/ -d lib/",
+    "prepublish": "npm run compile && npm run bundle",
+    "bundle": "rm -rf ./dist/* && npm run compile && esbuild ./lib/constructorio.js --bundle --minify --outfile=\"./dist/constructorio-client-javascript-$(echo $npm_package_version)\".js"
   },
   "repository": {
     "type": "git",
@@ -41,6 +42,7 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^8.6.0",
+    "esbuild": "^0.12.28",
     "eslint": "^5.12.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.24.2",
