--- a/package.json
+++ b/package.json
@@ -5,19 +5,19 @@
   "main": "lib/constructorio.js",
   "scripts": {
     "clean": "sudo rm -rf node_modules package-lock.json",
-    "version": "chmod +x ./scripts/verify-node-version.sh && ./scripts/verify-node-version.sh && npm run docs && git add ./docs/*",
+    "version": "chmod +x ./scripts/verify-node-version.sh && ./scripts/verify-node-version.sh && npm run docs && git add ./docs/* && npm run bundle && git add ./dist/*",
     "check-lisc": "license-checker --production --onlyAllow 'Apache-2.0;BSD-3-Clause;MIT'",
     "lint": "eslint 'src/**/*.js' 'spec/**/*.js'",
     "test": "npm run compile && mkdir -p test && cp -rf lib/* test && mocha ./spec/* --opts ./mocha.opts --recursive",
     "test:src": "mkdir -p test && cp -rf src/* test && mocha ./spec/* --opts ./mocha.opts --recursive",
-    "test:bundle": "npm run bundle && RUN_TESTS_AGAINST_BUNDLE=true mocha ./spec/* --opts ./mocha.opts --recursive",
+    "test:bundle": "npm run bundle && RUN_TESTS_AGAINST_BUNDLE=true PACKAGE_VERSION=$(echo $npm_package_version) mocha ./spec/* --opts ./mocha.opts --recursive",
     "precoverage": "rm -rf ./coverage && rm -rf ./.nyc_output",
     "coverage": "nyc --all --reporter=html npm run test:src",
     "postcoverage": "serve --listen 8080 --config ./serve.json && rm -rf test",
     "docs": "jsdoc --configure ./.jsdoc.json ./README.md --recurse ./src --destination ./docs",
     "compile": "babel src/ -d lib/",
-    "prepublish": "npm run bundle",
-    "bundle": "rm -rf ./dist/* && npm run compile && esbuild ./lib/constructorio.js --bundle --minify --outfile=\"./dist/constructorio-client-javascript-$(echo $npm_package_version)\".js"
+    "prepublish": "npm run compile",
+    "bundle": "rm -rf ./dist/* && npm run compile && esbuild ./lib/constructorio.js --bundle --minify --define:global=window --outfile=\"./dist/constructorio-client-javascript-$(echo $npm_package_version)\".js"
   },
   "repository": {
     "type": "git",
