--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "lint": "eslint 'src/**/*.js' 'spec/**/*.js'",
     "test": "npm run compile && mkdir -p test && cp -rf lib/* test && mocha ./spec/* --opts ./mocha.opts --recursive",
     "test:src": "mkdir -p test && cp -rf src/* test && mocha ./spec/* --opts ./mocha.opts --recursive",
-    "test:bundled": "npm run bundle && RUN_TESTS_AGAINST_BUNDLE=true PACKAGE_VERSION=$(echo $npm_package_version) mocha ./spec/* --opts ./mocha.opts --recursive",
-    "test:all:": "npm run test && npm run test:bundled",
+    "test:bundled": "npm run bundle && BUNDLED=true PACKAGE_VERSION=$(echo $npm_package_version) mocha ./spec/* --opts ./mocha.opts --recursive",
+    "test:all": "npm run test && npm run test:bundled",
     "precoverage": "rm -rf ./coverage && rm -rf ./.nyc_output",
     "coverage": "nyc --all --reporter=html npm run test:src",
     "postcoverage": "serve --listen 8080 --config ./serve.json && rm -rf test",
     "docs": "jsdoc --configure ./.jsdoc.json ./README.md --recurse ./src --destination ./docs",
     "compile": "babel src/ -d lib/",
     "prepublish": "npm run compile",
-    "bundle": "rm -rf ./dist/* && npm run compile && esbuild ./lib/constructorio.js --bundle --minify --define:global=window --outfile=\"./dist/constructorio-client-javascript-$(echo $npm_package_version)\".js"
+    "bundle": "rm -rf ./dist/* && npm run compile && BUNDLED=true esbuild ./lib/constructorio.js --bundle --minify --define:global=window --define:process.env={\\'BUNDLED\\':\\'true\\'} --outfile=\"./dist/constructorio-client-javascript-$(echo $npm_package_version)\".js"
   },
   "repository": {
     "type": "git",
