--- a/package.json
+++ b/package.json
@@ -5,17 +5,20 @@
   "main": "lib/constructorio.js",
   "scripts": {
     "clean": "sudo rm -rf node_modules package-lock.json",
-    "version": "chmod +x ./scripts/verify-node-version.sh && ./scripts/verify-node-version.sh && npm run docs && git add ./docs/*",
+    "version": "chmod +x ./scripts/verify-node-version.sh && ./scripts/verify-node-version.sh && npm run docs && git add ./docs/* && npm run bundle && git add ./dist/*",
     "check-lisc": "license-checker --production --onlyAllow 'Apache-2.0;BSD-3-Clause;MIT'",
     "lint": "eslint 'src/**/*.js' 'spec/**/*.js'",
     "test": "npm run compile && mkdir -p test && cp -rf lib/* test && mocha ./spec/* --opts ./mocha.opts --recursive",
     "test:src": "mkdir -p test && cp -rf src/* test && mocha ./spec/* --opts ./mocha.opts --recursive",
+    "test:bundled": "npm run bundle && BUNDLED=true PACKAGE_VERSION=$(echo $npm_package_version) mocha ./spec/* --opts ./mocha.opts --recursive",
+    "test:all": "npm run test && npm run test:bundled",
     "precoverage": "rm -rf ./coverage && rm -rf ./.nyc_output",
     "coverage": "nyc --all --reporter=html npm run test:src",
     "postcoverage": "serve --listen 8080 --config ./serve.json && rm -rf test",
     "docs": "jsdoc --configure ./.jsdoc.json ./README.md --recurse ./src --destination ./docs",
-    "compile": "babel -d lib/ src/",
-    "prepublish": "npm run compile"
+    "compile": "babel src/ -d lib/",
+    "prepublish": "npm run compile",
+    "bundle": "rm -rf ./dist/* && npm run compile && node bundle.js"
   },
   "repository": {
     "type": "git",
@@ -41,6 +44,7 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^8.6.0",
+    "esbuild": "^0.12.28",
     "eslint": "^5.12.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.24.2",
