Update dependencies to avoid security warnings, move to Mocha JSON options file as current way is deprecated in later versions.

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "version": "chmod +x ./scripts/verify-node-version.sh && ./scripts/verify-node-version.sh && npm run docs && git add ./docs/* && npm run bundle && git add -A ./dist",
     "check-lisc": "license-checker --production --onlyAllow 'Apache-2.0;BSD-3-Clause;MIT'",
     "lint": "eslint 'src/**/*.js' 'spec/**/*.js'",
-    "test": "npm run compile && mkdir -p test && cp -rf lib/* test && mocha ./spec/* --opts ./mocha.opts --recursive",
-    "test:src": "mkdir -p test && cp -rf src/* test && mocha ./spec/* --opts ./mocha.opts --recursive",
-    "test:bundled": "npm run bundle && BUNDLED=true PACKAGE_VERSION=$(echo $npm_package_version) mocha ./spec/* --opts ./mocha.opts --recursive",
+    "test": "npm run compile && mkdir -p test && cp -rf lib/* test && mocha ./spec/*",
+    "test:src": "mkdir -p test && cp -rf src/* test && mocha ./spec/*",
+    "test:bundled": "npm run bundle && BUNDLED=true PACKAGE_VERSION=$(echo $npm_package_version) mocha ./spec/*",
     "test:all": "npm run test && npm run test:bundled",
     "precoverage": "rm -rf ./coverage && rm -rf ./.nyc_output",
     "coverage": "nyc --all --reporter=html npm run test:src",
@@ -37,27 +37,27 @@
     "lib/**/*"
   ],
   "devDependencies": {
-    "@babel/cli": "^7.15.4",
-    "@babel/core": "^7.15.5",
-    "@babel/preset-env": "^7.15.6",
+    "@babel/cli": "^7.15.7",
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
     "@babel/register": "^7.15.3",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^8.6.0",
     "esbuild": "^0.12.28",
-    "eslint": "^5.12.1",
+    "eslint": "^8.0.1",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-import": "^2.25.2",
     "jsdoc": "^3.6.7",
     "jsdom": "^15.1.1",
     "license-checker": "^25.0.1",
     "lodash.clonedeep": "^4.5.0",
     "minami": "^1.2.3",
-    "mocha": "^6.2.0",
+    "mocha": "^6.2.3",
     "mocha-jsdom": "^2.0.0",
-    "nyc": "^14.1.1",
+    "nyc": "^15.1.0",
     "pre-push": "^0.1.1",
-    "serve": "^11.3.2",
+    "serve": "^12.0.1",
     "sinon": "^7.5.0",
     "sinon-chai": "^3.7.0"
   },
