--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "docs": "jsdoc --configure ./.jsdoc.json ./README.md --recurse ./src --destination ./docs",
     "compile": "babel src/ -d lib/",
     "prepublish": "npm run compile",
-    "bundle": "rm -rf ./dist/* && npm run compile && node bundle.js"
+    "bundle": "rm -rf ./dist/* && npm run compile && node bundle.js",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -30,9 +31,6 @@
     "url": "https://github.com/Constructor-io/constructorio-client-javascript/issues"
   },
   "homepage": "https://github.com/Constructor-io/constructorio-client-javascript#readme",
-  "pre-push": [
-    "lint"
-  ],
   "files": [
     "lib/**/*"
   ],
@@ -49,6 +47,7 @@
     "eslint": "^8.0.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.25.2",
+    "husky": "^7.0.4",
     "jsdoc": "^3.6.7",
     "jsdom": "^15.1.1",
     "license-checker": "^25.0.1",
@@ -57,7 +56,6 @@
     "mocha": "^9.1.3",
     "mocha-jsdom": "^2.0.0",
     "nyc": "^15.1.0",
-    "pre-push": "^0.1.1",
     "serve": "^13.0.2",
     "sinon": "^7.5.0",
     "sinon-chai": "^3.7.0"
