--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "eslint-plugin-import": "^2.25.2",
     "husky": "^7.0.4",
     "jsdoc": "^3.6.7",
-    "jsdom": "^15.1.1",
+    "jsdom": "15.2.1",
+    "jsdom-global": "3.0.2",
     "license-checker": "^25.0.1",
     "lodash.clonedeep": "^4.5.0",
     "minami": "^1.2.3",
