--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/preset-env": "^7.15.8",
     "@babel/register": "^7.15.3",
+    "@babel/runtime": "^7.19.0",
     "@cspell/eslint-plugin": "^6.8.2",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
