--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "coverage": "nyc --all --reporter=html npm run test:src",
     "postcoverage": "serve --listen 8080 --config ./serve.json && rm -rf test",
     "docs": "jsdoc --configure ./.jsdoc.json ./README.md --recurse ./src --destination ./docs",
-    "compile": "babel src/ -d lib/ --copy-files && del lib/types/tests",
+    "compile": "babel src/ -d lib/ --copy-files && rm -rf lib/types/tests",
     "prepublish": "npm run compile",
     "bundle": "rm -rf ./dist/* && npm run compile && node bundle.js",
     "prepare": "husky install"
@@ -43,7 +43,6 @@
     "@babel/register": "^7.15.3",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "del-cli": "^5.0.0",
     "dotenv": "^8.6.0",
     "esbuild": "^0.12.28",
     "eslint": "^8.17.0",
