--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -23,4 +23,4 @@ jobs:
       - name: Run tests 
         run: npm run test
         env:
-          API_KEY: ${{ secrets.API_KEY }}
+          TEST_API_KEY: ${{ secrets.TEST_API_KEY }}
