--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test:bundled": "npm run bundle && BUNDLED=true PACKAGE_VERSION=$(echo $npm_package_version) mocha ./spec/*",
     "test:bundled:parallel": "npm run bundle && BUNDLED=true PACKAGE_VERSION=$(echo $npm_package_version) mocha --parallel ./spec/*",
     "test:all": "npm run test && npm run test:bundled",
-    "test:all:parallel": "npm run test:parallel && npm run test:bundled:parallel",
+    "test:all:parallel": "npm run test:parallel & npm run test:bundled:parallel",
     "precoverage": "rm -rf ./coverage && rm -rf ./.nyc_output",
     "coverage": "nyc --all --reporter=html npm run test:src",
     "postcoverage": "open coverage/index.html && rm -rf test",
