--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "2.32.0",
   "description": "Constructor.io JavaScript client",
   "main": "lib/constructorio.js",
+  "types": "lib/types/constructorio.d.ts",
   "scripts": {
     "clean": "sudo rm -rf node_modules package-lock.json",
     "version": "chmod +x ./scripts/verify-node-version.sh && ./scripts/verify-node-version.sh && npm run docs && git add ./docs/* && npm run bundle && git add -A ./dist",
     "check-lisc": "license-checker --production --onlyAllow 'Apache-2.0;BSD-3-Clause;MIT'",
     "lint": "eslint 'src/**/*.js' 'spec/**/*.js'",
     "test": "npm run compile && mkdir -p test && cp -rf lib/* test && mocha ./spec/*",
+    "test:types": "tsd .",
     "test:parallel": "npm run compile && mkdir -p test && cp -rf lib/* test && mocha --parallel ./spec/*",
     "test:src": "mkdir -p test && cp -rf src/* test && mocha ./spec/*",
     "test:src:parallel": "mkdir -p test && cp -rf src/* test && mocha --parallel ./spec/*",
@@ -20,7 +22,7 @@
     "coverage": "nyc --all --reporter=html npm run test:src",
     "postcoverage": "open coverage/index.html && rm -rf test",
     "docs": "jsdoc --configure ./.jsdoc.json ./README.md --recurse ./src --destination ./docs",
-    "compile": "babel src/ -d lib/",
+    "compile": "babel src/ -d lib/ --copy-files && rm -rf lib/types/tests",
     "prepublish": "npm run compile",
     "bundle": "rm -rf ./dist/* && npm run compile && node bundle.js",
     "prepare": "husky install"
@@ -61,7 +63,8 @@
     "mocha": "^9.1.3",
     "nyc": "^15.1.0",
     "sinon": "^7.5.0",
-    "sinon-chai": "^3.7.0"
+    "sinon-chai": "^3.7.0",
+    "tsd": "^0.24.1"
   },
   "dependencies": {
     "@constructor-io/constructorio-id": "^2.4.10",
@@ -73,5 +76,8 @@
   },
   "peerDependencies": {
     "@babel/runtime": "^7.19.0"
+  },
+  "tsd": {
+    "directory": "src/types/tests"
   }
 }
