--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@babel/preset-env": "^7.15.8",
     "@babel/register": "^7.15.3",
     "@cspell/eslint-plugin": "^6.8.2",
+    "@types/events": "^3.0.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^8.6.0",
