--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -24,5 +24,5 @@ jobs:
       - name: Run tests
         run: npm run test:all:parallel
         env:
-          TEST_API_KEY: ${{ secrets.TEST_API_KEY }}
+          TEST_REQUEST_API_KEY: ${{ secrets.TEST_REQUEST_API_KEY }}
           SKIP_NETWORK_TIMEOUT_TESTS: true
