--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "types": "lib/types/constructorio.d.ts",
   "scripts": {
     "clean": "sudo rm -rf node_modules package-lock.json",
-    "version": "chmod +x ./scripts/verify-node-version.sh && ./scripts/verify-node-version.sh && npm run docs && git add ./docs/* && npm run bundle && git add -A ./dist",
+    "verify-node-version": "chmod +x ./scripts/verify-node-version.sh && ./scripts/verify-node-version.sh",
+    "version": "npm run verify-node-version && npm run docs && git add ./docs/* && npm run bundle && git add -A ./dist",
     "check-lisc": "license-checker --production --onlyAllow 'Apache-2.0;BSD-3-Clause;MIT'",
     "lint": "eslint 'src/**/*.js' 'spec/**/*.js' 'src/**/*.d.ts'",
     "test": "npm run compile && mkdir -p test && cp -rf lib/* test && mocha ./spec/*",
