--- a/package.json
+++ b/package.json
@@ -53,17 +53,17 @@
     "@typescript-eslint/parser": "^5.48.1",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "docdash": "^2.0.1",
     "dotenv": "^8.6.0",
     "esbuild": "^0.12.28",
     "eslint": "^8.17.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.2",
     "husky": "^7.0.4",
-    "jsdoc": "^3.6.7",
+    "jsdoc": "^4.0.2",
     "jsdom": "^16.7.0",
     "license-checker": "^25.0.1",
     "lodash.clonedeep": "^4.5.0",
-    "minami": "^1.2.3",
     "mocha": "^9.1.3",
     "nyc": "^15.1.0",
     "qs": "^6.11.0",
