--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
   "dependencies": {
     "@constructor-io/constructorio-id": "^2.4.10",
     "crc-32": "^1.2.2",
-    "events": "^3.0.0",
+    "events-polyfill": "npm:events@^3.0.0",
     "fetch-ponyfill": "^7.1.0",
     "store2": "^2.14.2"
   },
