--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "lint": "eslint 'src/**/*.js' 'spec/**/*.js' 'src/**/*.d.ts'",
     "test": "npm run compile && mkdir -p test && cp -rf lib/* test && mocha ./spec/*",
     "test:types": "tsd .",
-    "test:parallel": "npm run compile && mkdir -p test && cp -rf lib/* test && mocha --parallel ./spec/*",
+    "test:parallel": "npm run compile && mkdir -p test && cp -rf lib/* test && mocha --parallel --retries 3 ./spec/*",
     "test:src": "mkdir -p test && cp -rf src/* test && mocha ./spec/*",
     "test:src:parallel": "mkdir -p test && cp -rf src/* test && mocha --parallel ./spec/*",
     "test:bundled": "npm run bundle && BUNDLED=true PACKAGE_VERSION=$(echo $npm_package_version) mocha ./spec/*",
-    "test:bundled:parallel": "npm run bundle && BUNDLED=true PACKAGE_VERSION=$(echo $npm_package_version) mocha --parallel ./spec/*",
+    "test:bundled:parallel": "npm run bundle && BUNDLED=true PACKAGE_VERSION=$(echo $npm_package_version) mocha --parallel --retries 3 ./spec/*",
     "test:all": "npm run test && npm run test:bundled",
     "test:all:parallel": "npm run test:parallel && npm run test:bundled:parallel",
     "precoverage": "rm -rf ./coverage && rm -rf ./.nyc_output",
