[CSL-2921] Remove store2 dependency (#289)
* Remove store2

* Update length function

* Update overflow tests

* Add tests for complex values

* Update store implementation to handle sessionStorage and localStorage
undefined

* Remove store2

* Fix localStorage bug

* Update tests

* Remove store2

* Add try catch for store value parsing

* Update get logic

---------

Co-authored-by: mocca102 <islaam.agamy@gmail.com>

--- a/package.json
+++ b/package.json
@@ -73,8 +73,7 @@
   "dependencies": {
     "@constructor-io/constructorio-id": "^2.4.17",
     "crc-32": "^1.2.2",
-    "fetch-ponyfill": "^7.1.0",
-    "store2": "^2.14.2"
+    "fetch-ponyfill": "^7.1.0"
   },
   "peerDependencies": {
     "@babel/runtime": "^7.19.0"
