--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint": "^8.17.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.2",
+    "eventsource": "^2.0.2",
     "husky": "^7.0.4",
     "jsdoc": "^4.0.2",
     "jsdom": "^16.7.0",
@@ -68,7 +69,8 @@
     "qs": "^6.11.0",
     "sinon": "^7.5.0",
     "sinon-chai": "^3.7.0",
-    "tsd": "^0.24.1"
+    "tsd": "^0.24.1",
+    "web-streams-polyfill": "^4.0.0"
   },
   "dependencies": {
     "@constructor-io/constructorio-id": "^2.4.17",
