--- a/.github/workflows/run-semgrep.yml
+++ b/.github/workflows/run-semgrep.yml
@@ -19,4 +19,5 @@ jobs:
         run: semgrep ci
         env:
           SEMGREP_APP_TOKEN: ${{ secrets.SEMGREP_APP_TOKEN }}
+          SEMGREP_BASELINE_REF: "master"
 
