Remove fetch-ponyfill

--- a/package.json
+++ b/package.json
@@ -74,8 +74,7 @@
   },
   "dependencies": {
     "@constructor-io/constructorio-id": "^2.4.17",
-    "crc-32": "^1.2.2",
-    "fetch-ponyfill": "^7.1.0"
+    "crc-32": "^1.2.2"
   },
   "peerDependencies": {
     "@babel/runtime": "^7.19.0"
