--- a/.github/workflows/run-tests-bundled.yml
+++ b/.github/workflows/run-tests-bundled.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - "**"
 concurrency:
-  group: run-tests-${{ github.head_ref }}
+  group: run-tests-bundled-${{ github.head_ref }}
   cancel-in-progress: true
 jobs:
   build:
